syntax = "proto3";

package schemes;

option go_package = "github.com/relab/ct-eth-dapp/pkg/schemes";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";

message Entity {
    string id = 1;
    string name = 2;
    string role = 3;
}

message AssignmentGrade {
    string id = 1;
    string name = 2;
    string code = 3;
    string category = 4;
    repeated string type = 5;
    string language = 6;
    string description = 7;
    repeated Entity evaluators = 8;
    Entity student = 9;
    int64 grade = 10;
    string student_presence = 11;
}

// TODO: create verifiable credentials compatible with the VC spec
message AssignmentGradeCredential {
    AssignmentGrade assignment = 1;
    string created_by = 2;
    google.protobuf.Timestamp created_at = 3;
    repeated Entity offered_by = 4;
    string evidence_document = 5;
    string document_presence = 6;
    google.protobuf.Any additional_information = 7;
}

message CourseGrade {
    string id = 17;
    string name = 2;
    string code = 3;
    string category = 4;
    repeated string type = 5;
    string language = 6;
    string semester = 7;
    string description = 8;
    google.protobuf.Duration duration = 9;
    repeated Entity teachers = 10;
    repeated Entity evaluators = 11;
    Entity student = 12;
    string grading_system = 13; // e.g. ECTS, U.S, UK, 13-scale
    int64 total_credits = 14;
    int64 final_grade = 15; // course final grade (percentage if using ECTS grading)
    string student_presence = 16; //e.g. physical, digital/online
    repeated AssignmentGradeCredential assignments = 1; // list of assignments of student
}

// TODO: DRY
message CourseGradeCredential {
    CourseGrade course = 1;
    string created_by = 2;
    google.protobuf.Timestamp created_at = 3;
    repeated Entity offered_by = 4;
    string evidence_document = 5;
    string document_presence = 6;
    google.protobuf.Any additional_information = 7;
}

message Diploma {
    string id = 19;
    string name = 2;
    string code = 3;
    string category = 4;
    repeated string type = 5;
    string language = 6;
    string semester = 7;
    string description = 8;
    repeated Entity supervisors = 9;
    repeated Entity evaluators = 10;
    Entity student = 11;
    google.protobuf.Duration duration = 12; // e.g. 3 years
    string grading_system = 13; // e.g. ECTS, U.S, UK, 13-scale
    string mode_of_study = 14; // e.g. Full-time, part-time
    int64 total_credits = 15;
    map<string, int64> grades = 16; // final diploma grades (e.g. gpa)
    string student_presence = 17;
    repeated CourseGradeCredential courses = 1; // list of courses grades of student
    google.protobuf.Any supplement = 18;
}

message DiplomaCredential {
    Diploma diploma = 1;
    string created_by = 2;
    google.protobuf.Timestamp created_at = 3;
    repeated Entity offered_by = 4;
    string evidence_document = 5;
    string document_presence = 6;
    google.protobuf.Any additional_information = 7;
}

